FIS-22 initial admin gui (fxml, controller)

--- a/src/main/resources/com/example/holiday/HR.fxml
+++ b/src/main/resources/com/example/holiday/HR.fxml
@@ -23,6 +23,6 @@
         </AnchorPane>
     </top>
    <center>
-      <Button mnemonicParsing="false" text="Validate Request" BorderPane.alignment="CENTER" />
+      <Button mnemonicParsing="false" text="Validate Requests" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
