--- a/src/main/resources/com/example/holiday/Employee.fxml
+++ b/src/main/resources/com/example/holiday/Employee.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -11,47 +12,48 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="520.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.holiday.Controller2">
     <left>
-        <AnchorPane prefHeight="400.0" prefWidth="260.0" style="-fx-background-color: #89CFF0#89CFF0;"
-                    BorderPane.alignment="CENTER">
-            <ListView fx:id="myListView" layoutX="12.0" layoutY="55.0" prefHeight="312.0" prefWidth="235.0"
-                      style="-fx-background-color: #defcfb;"/>
-            <Label layoutX="63.0" layoutY="14.0" prefHeight="23.0" prefWidth="134.0" text="Leave Types"
-                   textFill="WHITE">
+        <AnchorPane prefHeight="400.0" prefWidth="260.0" style="-fx-background-color: #89CFF0#89CFF0;" BorderPane.alignment="CENTER">
+            <ListView fx:id="myListView" layoutX="12.0" layoutY="75.0" prefHeight="277.0" prefWidth="235.0" style="-fx-background-color: #defcfb;" />
+            <Label layoutX="63.0" layoutY="14.0" prefHeight="23.0" prefWidth="134.0" text="Leave Types" textFill="WHITE">
                 <font>
-                    <Font name="Verdana Bold" size="18.0"/>
+                    <Font name="Verdana Bold" size="18.0" />
                 </font>
                 <effect>
-                    <DropShadow/>
+                    <DropShadow />
                 </effect>
             </Label>
+            <Button fx:id="validButton" alignment="TOP_CENTER" layoutX="77.0" layoutY="363.0" mnemonicParsing="false" onAction="#validButtonAction" style="-fx-background-color: #defcfb;" text="Request Leave" textFill="#656464">
+                <font>
+                    <Font name="Verdana" size="12.0" />
+                </font>
+            </Button>
+            <Label fx:id="myLabel1" alignment="TOP_CENTER" layoutX="5.0" layoutY="52.0" prefHeight="17.0" prefWidth="250.0" textFill="#656464" />
         </AnchorPane>
     </left>
     <center>
-        <AnchorPane prefHeight="400.0" prefWidth="236.0" style="-fx-background-color: #89CFF0#89CFF0;"
-                    BorderPane.alignment="CENTER">
+        <AnchorPane prefHeight="400.0" prefWidth="236.0" style="-fx-background-color: #89CFF0#89CFF0;" BorderPane.alignment="CENTER">
             <Label layoutX="93.0" layoutY="14.0" prefHeight="23.0" prefWidth="53.0" text="Time" textFill="WHITE">
                 <font>
-                    <Font name="Verdana Bold" size="18.0"/>
+                    <Font name="Verdana Bold" size="18.0" />
                 </font>
                 <effect>
-                    <DropShadow/>
+                    <DropShadow />
                 </effect>
             </Label>
-            <Button fx:id="validButton" layoutX="85.0" layoutY="335.0" mnemonicParsing="false"
-                    onAction="#validButtonAction" style="-fx-background-color: #E96151;" text="Take Leave"
-                    textFill="WHITE">
-                <font>
-                    <Font name="Verdana" size="12.0"/>
-                </font>
-            </Button>
-            <DatePicker fx:id="myDatePicker" layoutX="15.0" layoutY="55.0" onAction="#getDate" prefHeight="26.0"
-                        prefWidth="202.0" promptText="Select the date"/>
-            <Label fx:id="myLabel1" alignment="TOP_CENTER" layoutX="1.0" layoutY="294.0" prefHeight="17.0"
-                   prefWidth="256.0"/>
-            <Label fx:id="myLabel2" alignment="TOP_CENTER" layoutX="10.0" layoutY="311.0" prefHeight="17.0"
-                   prefWidth="240.0"/>
-            <Label fx:id="requestMessageLabel" alignment="TOP_CENTER" layoutX="8.0" layoutY="369.0" prefHeight="17.0"
-                   prefWidth="247.0"/>
+            <DatePicker fx:id="myDatePicker" layoutX="31.0" layoutY="71.0" onAction="#getDate" prefHeight="26.0" prefWidth="202.0" promptText="Select the date" />
+            <Label fx:id="myLabel2" alignment="TOP_CENTER" layoutX="12.0" layoutY="54.0" prefHeight="17.0" prefWidth="240.0" textFill="#656464" />
+            <Label fx:id="requestMessageLabel" alignment="TOP_CENTER" layoutX="20.0" layoutY="338.0" prefHeight="17.0" prefWidth="228.0" textFill="#656464" />
+         <Button fx:id="closeButton" alignment="TOP_CENTER" layoutX="197.0" layoutY="363.0" mnemonicParsing="false" onAction="#closeButtonAction" prefHeight="20.0" prefWidth="49.0" style="-fx-background-color: #defcfb;" text="Close" textFill="#656464">
+            <font>
+               <Font name="Verdana" size="12.0" />
+            </font>
+         </Button>
+         <Separator layoutX="8.0" layoutY="12.0" orientation="VERTICAL" prefHeight="376.0" prefWidth="0.0" />
+         <Button fx:id="backButton" alignment="TOP_CENTER" layoutX="20.0" layoutY="363.0" mnemonicParsing="false" onAction="#backButtonAction" prefHeight="20.0" prefWidth="49.0" style="-fx-background-color: #defcfb;" text="Back" textFill="#656464">
+            <font>
+               <Font name="Verdana" size="12.0" />
+            </font>
+         </Button>
         </AnchorPane>
     </center>
 </BorderPane>
