--- a/src/main/resources/com/example/holiday/HR.fxml
+++ b/src/main/resources/com/example/holiday/HR.fxml
@@ -2,7 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
@@ -36,6 +38,11 @@
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
             <Button fx:id="validationButton" layoutX="202.0" layoutY="262.0" mnemonicParsing="false" onAction="#validationButtonAction" style="-fx-background-color: #defcfb;" text="Validate Requests" textFill="#656464" />
+            <Separator layoutX="144.0" layoutY="12.0" prefHeight="4.0" prefWidth="232.0" />
+            <Separator layoutX="144.0" layoutY="247.0" prefHeight="4.0" prefWidth="232.0" />
+            <Separator layoutX="141.0" layoutY="13.0" orientation="VERTICAL" prefHeight="237.0" prefWidth="4.0" />
+            <Separator layoutX="373.0" layoutY="12.0" orientation="VERTICAL" prefHeight="238.0" prefWidth="4.0" />
+            <ImageView fx:id="myImageView" fitHeight="223.0" fitWidth="222.0" layoutX="148.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </AnchorPane>
    </center>
