--- a/src/main/resources/com/example/holiday/Employee.fxml
+++ b/src/main/resources/com/example/holiday/Employee.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -54,6 +55,8 @@
                <Font name="Verdana" size="12.0" />
             </font>
          </Button>
+         <Spinner fx:id="mySpinner" layoutX="176.0" layoutY="304.0" prefHeight="26.0" prefWidth="70.0" />
+         <Label layoutX="20.0" layoutY="309.0" prefHeight="17.0" prefWidth="146.0" text="Select the number of days" textFill="#656464" />
         </AnchorPane>
     </center>
 </BorderPane>
